[workspace]
resolver = "2"
members = [
    "fvm",
    "sdk",
    "shared",
    "ipld/*",
]

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true

# so we don't run out of disk space on Github CI
[profile.dev.package.fvm_gas_calibration]
strip = true

[profile.wasm]
inherits = "release"
panic = "abort"
overflow-checks = false
lto = true
opt-level = "z"
strip = true
codegen-units = 1
incremental = false
